Fix T61360: Weight paint tools ignore face select

Face selection was added in weight paint mode since 2.7x,
however tools hadn't been updated.